# pyutils

./: .buildinfo  .env.template  .gitignore  .gitmessage  .pre-commit-config.yaml  .releaserc.json  CHANGELOG.md  Makefile  PROJECT_SUMMARY.md  README.md  README.rst  authors.html  benchmark.py  benchmark_collection.py  build.ps1  changelog.html  contributing.html  examples.py  genindex.html  history.html  index.html  installation.html  make.ps1  modules.html  objects.inv  package-lock.json  package.json  publish.ps1  py-modindex.html  pyproject.toml  pytest.ini  pyutils.html  quickstart.html  readme.html  ruff.toml  run_tests.py  search.html  searchindex.js  test_basic.py  tox.ini  (+1 more)
.doctrees/: authors.doctree  changelog.doctree  contributing.doctree  environment.pickle  history.doctree  index.doctree  installation.doctree  modules.doctree  pyutils.doctree  quickstart.doctree  readme.doctree  usage.doctree
.github/: GITHUB_ACTIONS_QUICK_REFERENCE.md  GITHUB_ACTIONS_SETUP.md  GITHUB_PAGES_SETUP.md  ISSUE_TEMPLATE.md
_modules/: index.html
ai_docs/: ADVANCED_QUALITY_RECOMMENDATIONS.md  CODE_QUALITY_ENHANCEMENTS.md  CODE_QUALITY_IMPROVEMENTS.md  COLLECTION_FEATURES.md  ENVIRONMENT_MIGRATION.md  ENV_SETUP.md  PYPI_AUTH_FIX.md  PYPI_RELEASE_FIX_SUMMARY.md  PYPI_RELEASE_TROUBLESHOOTING.md  RELEASE_GUIDE.md  SEMANTIC_RELEASE.md  SEMANTIC_RELEASE_OPTIMIZATION.md  SEMANTIC_RELEASE_SOLUTION_SUMMARY.md  SEMANTIC_RELEASE_TROUBLESHOOTING.md  github-actions-release.md
docs/: GITHUB_PAGES_SETUP.md  Makefile  api.rst  changelog.rst  conf.py  contributing.rst  index.rst  pyutils.rst  (+2 more)
(+61 files in other folders)
